--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700;800&display=swap');
 
-body {
+* {
     font-family: 'Raleway', sans-serif;
+    font-size: 16px;
     margin: 0px;
 }
 
 /**HEADER**/
+header {
+    
+}
+
 nav {
     margin: 20px 0px 20px 0px;
     display: flex;
@@ -27,9 +32,29 @@ a:hover {
 }
 
 .intro {
+    background-color: green;
+    height: 40vw;
     display: flex;
     flex-direction: column;
-    width: 100%;
     align-items: center;
     border-top: solid black;
+    border-bottom: solid black;
+}
+
+#intro-title {
+    margin-top: 180px;
+    font-size: 3em;
+}
+
+#intro-text {
+    width: 50%;
+    text-align: justify;
+    margin: 40px 0px 50px 0px;
+}
+
+#intro-link {
+    border: solid black;
+    margin: 0px 5px 0px 5px;
+    border-width: 2px;
+    border-radius: 4px;
 }
