extra html en css pagina's

--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,6 @@
 }
 
 /**HEADER**/
-header {
-    
-}
 
 nav {
     margin: 20px 0px 20px 0px;
@@ -20,6 +17,7 @@ nav {
 }
 
 a {
+    margin: 5px;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
     color: black;
