--- a/css/style.css
+++ b/css/style.css
@@ -16,27 +16,25 @@ nav {
     justify-content: flex-end;
 }
 
-a {
+#nav-a {
     margin: 5px;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
     color: black;
 }
 
-a:hover {
+#nav-a:hover {
     color: white;
     background-color: black;
     border-radius: 4px;
 }
 
+/**MAIN**/
 .intro {
-    background-color: green;
-    height: 40vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     border-top: solid black;
-    border-bottom: solid black;
 }
 
 #intro-title {
@@ -51,8 +49,20 @@ a:hover {
 }
 
 #intro-link {
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+    color: black;
+
     border: solid black;
     margin: 0px 5px 0px 5px;
     border-width: 2px;
     border-radius: 4px;
+}
+
+/**FOOTER**/
+footer {
+    background-color: #322022;
+    position:sticky;
+    bottom: 0px;
+    padding: 60px 10px;
 }
