--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,15 @@
     margin: 0px;
 }
 
+body {
+    position: relative;
+    min-height: 100vh;
+}
+
 /**HEADER**/
 
 nav {
-    margin: 20px 0px 20px 0px;
+    margin: 20px 0px;
     display: flex;
     align-items: center;
     width: 100%;
@@ -18,7 +23,7 @@ nav {
 
 #nav-a {
     margin: 5px;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 20px;
     text-decoration: none;
     color: black;
 }
@@ -27,6 +32,7 @@ nav {
     color: white;
     background-color: black;
     border-radius: 4px;
+    text-decoration: underline;
 }
 
 /**MAIN**/
@@ -35,6 +41,7 @@ nav {
     flex-direction: column;
     align-items: center;
     border-top: solid black;
+    height: 100vh;
 }
 
 #intro-title {
@@ -49,20 +56,42 @@ nav {
 }
 
 #intro-link {
-    padding: 10px 20px 10px 20px;
+    padding: 10px 20px;
     text-decoration: none;
     color: black;
-
     border: solid black;
-    margin: 0px 5px 0px 5px;
+    margin: 0px 5px;
     border-width: 2px;
     border-radius: 4px;
 }
 
+#intro-link:hover {
+    text-decoration: underline;
+    background-color: black;
+    color:white;
+}
+
 /**FOOTER**/
 footer {
-    background-color: #322022;
-    position:sticky;
-    bottom: 0px;
-    padding: 60px 10px;
+    position: absolute;
+    bottom:0;
+    width: 100%;
+    background-color: black;
+    padding: 60px 0px;
+}
+
+.footer-links {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+#foot-a {
+    text-decoration: none;
+    color: white;
+    padding: 0px 20px;
+}
+
+#foot-a:hover {
+    text-decoration: underline;
 }
