--- a/css/books.css
+++ b/css/books.css
@@ -1,31 +1,65 @@
 .review-head {
     text-align: center;
+    font-size: 2.5em;
+    margin-top: 50px;
 }
 
 .book-reviews {
     display: flex;
     justify-content: center;
-    margin-top: 30px;
-    text-align: center;
+    margin: 30px 0px;
 }
 
-#book-box {
-    flex-basis: 25vw;
-    margin: 30px;
+.book-box {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 20vw;
+    margin: 50px 30px;
     border: solid black;
     border-width: 2px;
     border-radius: 7px;
 }
 
-#book-img{
-    width: 150px;
+.book-img-box {
+    background-color: #F0E0D0;
+    border-radius: 7px 7px 0px 0px;
+}
+
+.book-img{
+    width: 30%;
+    display: block;
+    margin: 10px auto;
 }
 
 #book-title {
-    text-align: left;
-    margin: 20px, 0px;
+    margin: 20px 20px;
+    font-size: 1.2em;;
+}
+
+.star-img {
+    width: 50%;
+    margin: 0px 20px;
 }
 
 #book-text {
-    text-align: left;
+    margin: 15px 20px;
+    flex-grow: 1;
+}
+
+.book-button {
+    background-color: black;
+    color: white;
+    border: solid black;
+    border-radius: 5px;
+    width: 25%;
+    text-align: center;
+    margin: 15px 20px;
+    padding: 10px 0px;
+    
+    transition: all 0.2s ease-out;
+}
+
+.book-button:hover {
+    background-color: white;
+    color: black;
 }
