--- a/css/books.css
+++ b/css/books.css
@@ -1,10 +1,10 @@
-.review-head {
+h1 {
     text-align: center;
     font-size: 2.5em;
     margin-top: 50px;
 }
 
-.book-reviews {
+#book-reviews {
     display: flex;
     justify-content: center;
     margin: 30px 0px;
@@ -20,6 +20,44 @@
     border-radius: 7px;
 }
 
+/*BOOK-BOX CONTENT*/
+h3 {
+    margin: 20px 20px;
+    font-size: 1.2em;;
+}
+
+.star-img {
+    width: 50%;
+    margin: 0px 20px;
+}
+
+.book-text {
+    margin: 15px 20px;
+    flex-grow: 1;
+}
+
+button {
+    background-color: #493B31;
+    color: #F9F8F0;
+    border: solid #493B31;
+    border-width: 2px;
+    border-radius: 5px;
+    width: 25%;
+    text-align: center;
+    margin: 15px 20px;
+    padding: 10px 0px;
+    
+    cursor: pointer;
+    transition: all 0.2s ease-out;
+}
+
+button:hover {
+    border-color: #DBD6BC;
+    background-color: #DBD6BC;
+    color: #181410;
+}
+
+/*BOOK IMAGES AND BACKGROUND*/
 .book-img-box {
     overflow: hidden;
     position: relative;
@@ -40,37 +78,4 @@
     margin: 10px auto;
 
     box-shadow: 10px 5px 10px #181410;
-}
-
-#book-title {
-    margin: 20px 20px;
-    font-size: 1.2em;;
-}
-
-.star-img {
-    width: 50%;
-    margin: 0px 20px;
-}
-
-#book-text {
-    margin: 15px 20px;
-    flex-grow: 1;
-}
-
-.book-button {
-    background-color: black;
-    color: white;
-    border: solid black;
-    border-radius: 5px;
-    width: 25%;
-    text-align: center;
-    margin: 15px 20px;
-    padding: 10px 0px;
-    
-    transition: all 0.2s ease-out;
-}
-
-.book-button:hover {
-    background-color: white;
-    color: black;
 }
