all colors are right, and formatting is fixed

--- a/css/home.css
+++ b/css/home.css
@@ -44,6 +44,7 @@ h1 {
 }
 
 .intro-link:hover {
-    background-color: #181410;
+    border-color: #CA9F7D;
+    background-color: #CA9F7D;
     color:#F9F8F0;
 }
