--- a/css/form.css
+++ b/css/form.css
@@ -77,6 +77,7 @@ select {
     border-width: 2px;
     padding: 20px 0px;
     margin: 30px 0px;
+    transition: all 0.3s ease-out;
 }
 
 #form-button:hover {
