--- a/css/home.css
+++ b/css/home.css
@@ -27,7 +27,7 @@ h1 {
     width: 50%;
     text-align: justify;
     text-align-last: center;
-    margin: 40px 0px 50px 0px;
+    margin: 5vh 0px;
     font-size: 1.3em;
 }
 
