--- a/css/books.css
+++ b/css/books.css
@@ -11,6 +11,7 @@ h1 {
 }
 
 .book-box {
+    background-color: #F9F8F0;
     display: flex;
     flex-direction: column;
     flex-basis: 25vw;
@@ -18,6 +19,13 @@ h1 {
     border: solid black;
     border-width: 2px;
     border-radius: 7px;
+
+    transition: all 0.5s ease-out;
+}
+
+.book-box:hover {
+    transform:scale(1) rotate(5deg) translate(10px, 10px);
+    transform-origin:center;
 }
 
 /*BOOK-BOX CONTENT*/
@@ -95,6 +103,10 @@ button:hover {
     .book-box {
         margin: 1.5vh 0;
     }
+
+    .book-box:hover {
+        transform: none;
+    }
 }
 
 /*TABLET SCREEN*/
@@ -107,5 +119,9 @@ button:hover {
 
     .book-box {
         margin: 5vh 0;
+    }
+
+    .book-box:hover {
+        transform: none;
     }
 }
