--- a/css/books.css
+++ b/css/books.css
@@ -1,6 +1,6 @@
 h1 {
     text-align: center;
-    font-size: 2.5em;
+    font-size: 2.5rem;
     margin-top: 50px;
 }
 
@@ -31,7 +31,7 @@ h1 {
 /*BOOK-BOX CONTENT*/
 h3 {
     margin: 20px 20px;
-    font-size: 1.2em;;
+    font-size: 1.2rem;;
 }
 
 .star-img {
