--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@
 }
 
 body {
-    position: relative;
     display: flex;
     flex-direction: column;
     color: #181410;
@@ -76,7 +75,7 @@ footer {
 
 #foot-text {
     color: white;
-    font-size: 0.8em;
+    font-size: 0.8rem;
 }
 
 .foot-img {
